# OoP

./: .gitignore
tukhbatulin_a_a/: CMakeLists.txt
tukhbatulin_a_a/prj.cw/canny/: CMakeLists.txt
tukhbatulin_a_a/prj.cw/canny/docs/: Doxyfile.in
tukhbatulin_a_a/prj.cw/canny/prj.lib/: CMakeLists.txt  canny.cpp
tukhbatulin_a_a/prj.cw/canny/prj.lib/include/canny/: canny.hpp
tukhbatulin_a_a/prj.cw/canny/prj.test/: CMakeLists.txt  contours.cpp  contours.test.cpp
tukhbatulin_a_a/prj.lab/: CMakeLists.txt
tukhbatulin_a_a/prj.lab/arrayd/: CMakeLists.txt  CmakeLists.txt  arrayd.cpp
tukhbatulin_a_a/prj.lab/arrayd/include/: arrayd.hpp
tukhbatulin_a_a/prj.lab/arrayd/include/arrayd/: arrayd.hpp
tukhbatulin_a_a/prj.lab/arrayt/: CMakeLists.txt
tukhbatulin_a_a/prj.lab/arrayt/include/arrayt/: arrayt.hpp
tukhbatulin_a_a/prj.lab/matrixs/: CMakeLists.txt  matrixs.cpp
tukhbatulin_a_a/prj.lab/matrixs/include/: matrixs.hpp
tukhbatulin_a_a/prj.lab/matrixs/include/matrixs/: matrixs.hpp
tukhbatulin_a_a/prj.lab/orto/: orto.cpp
tukhbatulin_a_a/prj.lab/rational/: CMakeLists.txt  rational.cpp
tukhbatulin_a_a/prj.lab/rational/include/rational/: rational.hpp
tukhbatulin_a_a/prj.test/: CMakeLists.txt  arrayd_test.cpp  matrixs_test.cpp  rational_test.cpp
